OVERVIEW
--------

Java client for the KBase authorization service (and Globus Online directly
where the KBase auth service doesn't yet have the required functionality).
See the versions file for a mapping of git commit -> version.

VERSION 0.4.1 (Released 7/31/16)
--------------------------------

BUG FIXES
- Fixed a bug that allowed configuration of incorrect urls.

VERSION 0.4.0 (Released 7/31/16)
--------------------------------

BACKWARDS INCOMPATIBILITIES:
- All RefreshingToken methods and classes are deprecated. They will fail once
  the new auth service is released.
- AuthConfig.getToken now returns an AuthToken from the RefreshingToken or
  standard token, depending on which one is set.
- The validateToken methods now only take a string for the token and return an
  AuthToken. Validation errors now throw an exception rather than returning
  false.
- All references to token expiration times have been removed.
- All getters in AuthToken have been removed other than getUserName and
  getToken() (a new method).
- The AuthToken constructor now takes a username and a token string.
- AuthToken.toString() now returns a string representation of the AuthToken
  object. Use getToken() to retrieve the token string.
- Tokens are now cached for at most 5 minutes and getting a token does not
  reset the expiration time.
- Many getters are removed from AuthUser. Only those fields compatible with
  the new auth service remain.
  
NEW FEATURES:
- The AuthConfig object now has a withToken method, which can be used to set
  a standard token instead of a refreshing token for querying users.


VERSION 0.3.2 (Released 6/9/16)
-------------------------------

BUG FIXES
- Globus token lifetime changed back to previous value, so duplicated in
  Authtoken class.
- Made RefreshingToken.getToken() synchronized.

VERSION 0.3.1 (Released 5/15/15)
------------------------------------------

BUG FIXES
- Fix for KBASE-2024 - looking up user info from Globus used a URL based on